--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: News Mongo
+name: UK News Mongo
 on:
   schedule:
     - cron: '*/10 * * * *'  # Runs every 10 minutes
@@ -8,7 +8,7 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: News Mongo 
+      - name: UK News Mongo 
         run: |
          status=$(curl -o /dev/null -s -w "%{http_code}" -m 600 ${{ secrets.URL }})
          echo "Status code: $status"
